WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285240
WebHistoryItemClient should send IPC to WebPageProxy instead of WebProcessProxy
https://bugs.webkit.org/show_bug.cgi?id=285240
Summary
WebHistoryItemClient should send IPC to WebPageProxy instead of WebProcessProxy
Charlie Wolfe
Reported
2024-12-30 01:48:05 PST
History items are scoped to the page, not the web process. Move the IPC message that notifies the UI process of history item changes from WebProcessProxy to WebPageProxy.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-30 01:48:17 PST
<
rdar://problem/142171346
>
Charlie Wolfe
Comment 2
2024-12-30 01:49:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38428
EWS
Comment 3
2025-01-01 18:30:14 PST
Committed
288357@main
(e29574ecddbe): <
https://commits.webkit.org/288357@main
> Reviewed commits have been landed. Closing PR #38428 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug