WebHistoryItemClient should send IPC to WebPageProxy instead of WebProcessProxy https://bugs.webkit.org/show_bug.cgi?id=285240 rdar://142171346

Reviewed by Alex Christensen.

History items are scoped to the page, not the web process. Move the IPC message that notifies the UI
process of history item changes from WebProcessProxy to WebPageProxy.

No change in behavior.

* Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::didReceiveMessage):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::backForwardUpdateItem):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::hasProvisionalPageWithID const): Deleted.
(WebKit::WebProcessProxy::isAllowedToUpdateBackForwardItem const): Deleted.
These validation functions can be removed. The WebPageProxy receiving the IPC should always have an
identifier that matches the pageID of the item.

(WebKit::WebProcessProxy::updateBackForwardItem): Deleted.
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/UIProcess/WebProcessProxy.messages.in:
* Source/WebKit/WebProcess/WebPage/WebHistoryItemClient.cpp:
(WebKit::WebHistoryItemClient::WebHistoryItemClient):
(WebKit::WebHistoryItemClient::historyItemChanged):
* Source/WebKit/WebProcess/WebPage/WebHistoryItemClient.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
* Source/WebKit/WebProcess/WebPage/WebPage.h:

Canonical link: https://commits.webkit.org/288357@main